# SBWT-Search

./: .clang-format  .clang-tidy  .clangd  .flake8  .gitignore  .pylintrc  .vimspector.json  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  index.html  out.bool  out.seqsizes
benchmark_objects/: .dir_docstring  (+3 more)
documentation/: .buildinfo  .dir_docstring  .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  conf.py.in  genindex.html  index.html  index.rst.in  make.bat  objects.inv  search.html  searchindex.js
documentation/Documents/: .doc_string  FileDocumentation.html  FileDocumentation.rst.in
documentation/Documents/ProjectDocumentation/: BenchmarkResults.rst  BenchmarkingNotes.rst  ColorSearchComponents.rst  ColorSearching.html  ColorSearching.rst  Components.rst  IndexSearchComponents.rst  IndexSearching.html  IndexSearching.rst  ProjectDocumentation.html  ProjectDocumentation.rst  Searching.rst
documentation/Documents/WorkflowDocumentation/: GettingsStarted.html  GettingsStarted.rst  Practices.html  Practices.rst  Tools.html  Tools.rst  WorkflowDocumentation.html  WorkflowDocumentation.rst  WorkflowFiles.rst
documentation/RST/: .dir_docstring  .gitignore  classdesign__utils_1_1SharedBatchesProducer.html  classgpu__utils_1_1GpuEvent.html  classgpu__utils_1_1GpuPointer.html  classgpu__utils_1_1GpuStream.html  classgpu__utils_1_1PinnedVector.html  classio__utils_1_1ThrowingIfstream.html  classio__utils_1_1ThrowingOfstream.html  classlog__utils_1_1Logger.html  classsbwt__search_1_1ArgumentParser.html  classsbwt__search_1_1AsciiContinuousColorResultsPrinter.html  classsbwt__search_1_1AsciiContinuousIndexResultsPrinter.html  classsbwt__search_1_1AsciiIndexFileParser.html  classsbwt__search_1_1BinaryContinuousColorResultsPrinter.html  classsbwt__search_1_1BinaryContinuousIndexResultsPrinter.html  classsbwt__search_1_1BinaryIndexFileParser.html  classsbwt__search_1_1BitSeqBatch.html  classsbwt__search_1_1BitsProducer.html  classsbwt__search_1_1BoolContinuousIndexResultsPrinter.html  classsbwt__search_1_1CharToBits.html  classsbwt__search_1_1ColorIndexBuilder.html  classsbwt__search_1_1ColorSearchArgumentParser.html  classsbwt__search_1_1ColorSearchMain.html  classsbwt__search_1_1ColorSearcher.html  classsbwt__search_1_1ColorsBatch.html  classsbwt__search_1_1ContinuousColorResultsPrinter.html  classsbwt__search_1_1ContinuousColorSearcher.html  classsbwt__search_1_1ContinuousIndexFileParser.html  classsbwt__search_1_1ContinuousIndexResultsPrinter.html  classsbwt__search_1_1ContinuousIndexSearcher.html  classsbwt__search_1_1ContinuousPositionsBuilder.html  classsbwt__search_1_1ContinuousSeqToBitsConverter.html  classsbwt__search_1_1ContinuousSequenceFileParser.html  classsbwt__search_1_1CpuColorIndexContainer.html  classsbwt__search_1_1CpuSbwtContainer.html  classsbwt__search_1_1CsvContinuousColorResultsPrinter.html  classsbwt__search_1_1FilenamesParser.html  classsbwt__search_1_1FilesizeLoadBalancer.html  classsbwt__search_1_1GpuColorIndexContainer.html  (+302 more)
documentation/WriteUps/Thesis/: .gitignore  HYgraduMLDS.cls  bibliography.bib  main.tex  todo.txt
documentation/_sources/: index.rst.txt
documentation/_sources/Documents/: FileDocumentation.rst.txt
documentation/_sources/RST/: classdesign__utils_1_1SharedBatchesProducer.rst.txt  classgpu__utils_1_1GpuEvent.rst.txt  classgpu__utils_1_1GpuPointer.rst.txt  classgpu__utils_1_1GpuStream.rst.txt  classgpu__utils_1_1PinnedVector.rst.txt  classio__utils_1_1ThrowingIfstream.rst.txt  classio__utils_1_1ThrowingOfstream.rst.txt  classlog__utils_1_1Logger.rst.txt  classsbwt__search_1_1ArgumentParser.rst.txt  classsbwt__search_1_1AsciiContinuousColorResultsPrinter.rst.txt  classsbwt__search_1_1AsciiContinuousIndexResultsPrinter.rst.txt  classsbwt__search_1_1AsciiIndexFileParser.rst.txt  classsbwt__search_1_1BinaryContinuousColorResultsPrinter.rst.txt  classsbwt__search_1_1BinaryContinuousIndexResultsPrinter.rst.txt  classsbwt__search_1_1BinaryIndexFileParser.rst.txt  classsbwt__search_1_1BitSeqBatch.rst.txt  classsbwt__search_1_1BitsProducer.rst.txt  classsbwt__search_1_1BoolContinuousIndexResultsPrinter.rst.txt  classsbwt__search_1_1CharToBits.rst.txt  classsbwt__search_1_1ColorIndexBuilder.rst.txt  classsbwt__search_1_1ColorSearchArgumentParser.rst.txt  classsbwt__search_1_1ColorSearchMain.rst.txt  classsbwt__search_1_1ColorSearcher.rst.txt  classsbwt__search_1_1ColorsBatch.rst.txt  classsbwt__search_1_1ContinuousColorResultsPrinter.rst.txt  classsbwt__search_1_1ContinuousColorSearcher.rst.txt  classsbwt__search_1_1ContinuousIndexFileParser.rst.txt  classsbwt__search_1_1ContinuousIndexResultsPrinter.rst.txt  classsbwt__search_1_1ContinuousIndexSearcher.rst.txt  classsbwt__search_1_1ContinuousPositionsBuilder.rst.txt  classsbwt__search_1_1ContinuousSeqToBitsConverter.rst.txt  classsbwt__search_1_1ContinuousSequenceFileParser.rst.txt  classsbwt__search_1_1CpuColorIndexContainer.rst.txt  classsbwt__search_1_1CpuSbwtContainer.rst.txt  (+303 more)
documentation/documents/: GettingsStarted.rst  Introduction.rst  Tools.rst  WorkflowFiles.rst
documentation/static/: .gitignore
(+795 files in other folders)
